--- a/src/app/HomePage/homePage.module.css
+++ b/src/app/HomePage/homePage.module.css
@@ -18,7 +18,28 @@
 
 .button:hover {
     background-color: rgb(90, 90, 90);
-  }
+}
+
+.inputcsv[type="file"] {
+    display: none;
+}
+
+.labelinput {
+    padding: 20px 30px;
+    background-color: rgb(235, 235, 235);
+    color: #000000;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    height: 90px;
+    width: 15%;
+    text-align: center;
+}
+
+.labelinput:hover {
+    background-color: rgb(90, 90, 90);
+}
 
 .menu {
     display: flex;
@@ -27,77 +48,85 @@
     padding: 100px 15px;
 }
 
-.container {
+.cardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.card {
+    width: calc(16.66% - 20px);
+    margin: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s; 
+}
+
+.card:hover {
+    transform: translateY(-5px); 
+}
+
+.cardImage {
+    width: 100%;
+    height: 350px; 
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.cardContent {
+    padding: 10px;
+}
+
+.cardTitle {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.cardPrice {
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.cardButton {
+    padding: 5px 10px;
+    font-size: 14px;
+    background-color: #45a049;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.cardButton:hover {
+    background-color: #3e8e41;
+}
+
+.cardDescription {
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.deleteButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(0, 0, 0, 0.3);
+    color: #000;
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+    cursor: pointer;
     display: flex;
     justify-content: center;
-    padding: 0 20px; 
-  }
-
-.thead {
-    position: sticky;
-    top: 0;
-    background-color: rgb(255, 255, 255);
-    z-index: 2;
+    align-items: center;
 }
 
-.tbody {
-    overflow-y: auto;
-}
-
-.table {
-    border-collapse: collapse;
-    width: 90%;
-    font-size: 30px;
-    overflow-y: auto;
-    border-radius: 100px;
-}
-  
-.table th,
-.table td {
-    padding: 12px;
-    text-align: left;
-    border-bottom: 1px solid #ffffff;
-    margin: 4px;
-}
-  
-.table th {
-    background-color: rgb(62, 71, 82);
-    color: rgb(0, 0, 0);
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-size: 50px;
-}
-
-.table tr {
-    background-color: rgb(26, 26, 26);
-    border-radius: 10px;
-    transition: background-color 0.3s ease;
-}
-
-.table td {
-    color: rgb(255, 255, 255);
-    font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    text-align: center;
-    margin-top: 8px;
-    line-height: 1.4;
-    font-weight: bold;
-}
-
-.table td,
-.table th {
-    border: none;
-    outline: none;
-}
-
-.title,
-.price,
-.description,
-.image,
-.category {
-  max-width: 50px;
-  overflow: hidden;
-  white-space: nowrap; 
-  padding-right: 10px;
-  margin-right: 10px;
+.deleteButton:hover {
+    background-color: rgba(0, 0, 0, 0.5);
 }
