--- a/src/app/HomePage/homePage.module.css
+++ b/src/app/HomePage/homePage.module.css
@@ -1,23 +1,25 @@
 .background {
     min-height: 100vh;
-    background-color: rgb(119, 119, 119);
+    background-color: #fff;
 }
 
 .button {
     padding: 15px 30px;
-    border: 0;
-    background-color: rgb(235, 235, 235);
+    background-color: #fff;
     color: #000000;
     font-size: 20px;
     font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
-    height: 90px;
+    height: 100px;
     max-width: 300px;
+    box-shadow: 0 0 20px rgb(0, 0, 0); 
+    border: none; 
+    transition: box-shadow 0.3s ease; 
 }
 
 .button:hover {
-    background-color: rgb(90, 90, 90);
+    background-color: rgb(182, 180, 180);
 }
 
 .inputcsv[type="file"] {
@@ -25,20 +27,22 @@
 }
 
 .labelinput {
-    padding: 20px 30px;
-    background-color: rgb(235, 235, 235);
+    padding: 25px 30px;
+    background-color: #fff;
     color: #000000;
     font-size: 20px;
     font-weight: bold;
     border-radius: 10px;
     cursor: pointer;
-    height: 90px;
-    width: 15%;
+    height: 100px;
+    width: 300px;
     text-align: center;
+    box-shadow: 0 0 20px rgb(0, 0, 0);
+    min-width: 300px;
 }
 
 .labelinput:hover {
-    background-color: rgb(90, 90, 90);
+    background-color: rgb(182, 180, 180);
 }
 
 .menu {
@@ -48,3 +52,21 @@
     padding: 100px 15px;
 }
 
+.redirect {
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: bold;
+    display: flex;
+    justify-content: end;
+    color: rgb(0, 0, 0);
+    background-color: #b6b8b3;
+    border-radius: 10px;
+    cursor: pointer;
+    height: 40px;
+    padding: 0 10px;
+    align-items: center;
+}
+
+.redirect:hover {
+    background-color: #818383;
+}
