--- a/src/app/CadastroUser/CadastroUser.module.css
+++ b/src/app/CadastroUser/CadastroUser.module.css
@@ -14,4 +14,10 @@
 .redirect {
     color: black;
     font-size: 20px;
+    text-decoration: none;
 }
+
+.redirect:hover {
+    text-decoration: underline;
+}
+
