--- a/src/app/LoginUser/LoginUser.module.css
+++ b/src/app/LoginUser/LoginUser.module.css
@@ -14,4 +14,9 @@
 .redirect {
     color: black;
     font-size: 20px;
+    text-decoration: none;
+}
+
+.redirect:hover {
+    text-decoration: underline;
 }
