--- a/src/app/components/CardProdutos/card.module.css
+++ b/src/app/components/CardProdutos/card.module.css
@@ -1,10 +1,11 @@
 .cardContainer {
     display: inline-flex;
     flex-wrap: wrap;
-    justify-content: flex-start; 
+    justify-content: flex-start;
     text-align: center;
     padding: 20px;
-    flex: 0 0 calc(16.66% - 20px); 
+    flex: 0 0 calc(16.66% - 20px);
+    align-items: center;
 }
 
 .card {
@@ -12,19 +13,25 @@
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s; 
+    transition: transform 0.3s;
     width: 350px;
     display: flex;
     flex-direction: column;
+    padding: 10px 10px;
+    position: relative; 
+}
+
+.imageContainer {
+    position: relative; 
 }
 
 .card:hover {
-    transform: translateY(-5px); 
+    transform: translateY(-5px);
 }
 
 .cardImage {
     width: 100%;
-    height: 350px; 
+    height: 350px;
     object-fit: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -67,21 +74,24 @@
 
 .deleteButton {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 5px;
+    right: 5px;
     background-color: rgba(0, 0, 0, 0.3);
-    color: #000;
+    color: #fff;
     border: none;
     border-radius: 50%;
     width: 30px;
     height: 30px;
     font-size: 20px;
+    line-height: 30px;
+    text-align: center;
     cursor: pointer;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
+    z-index: 1;
 }
 
-.deleteButton:hover {
-    background-color: rgba(0, 0, 0, 0.5);
+.card:hover .deleteButton {
+    display: flex; 
 }
