--- a/src/app/LoginUser/LoginUser.module.css
+++ b/src/app/LoginUser/LoginUser.module.css
@@ -20,3 +20,9 @@
 .redirect:hover {
     text-decoration: underline;
 }
+
+.error {
+    color: rgb(255, 0, 0);
+    font-size: 13px;
+    font-weight: bold;
+}
