--- a/src/app/LoginUser/LoginUser.module.css
+++ b/src/app/LoginUser/LoginUser.module.css
@@ -26,3 +26,14 @@
     font-size: 13px;
     font-weight: bold;
 }
+
+.button {
+    padding: 15px 30px;
+    border: 0;
+    background-color: rgb(99, 255, 99);
+    color: #FFFF;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;    
+}
